2008-01-10  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/command.c (replot_command): Fix for replot with unknown terminal.

2008-01-10  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/post.trm (PS_encode_image): Fix for maxcolors in "plot with
	image".

2008-01-10  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/hidden3d.c (store_polygon): Discard degenerate polygons.
	Bug #1727198

2008-01-09  Ethan A Merritt  <merritt@u.washington.edu>

	* src/eval.c (update_plot_bounds): Rename exported variables TERM_* to
	GPVAL_TERM_* so that they match other internally maintained variables.

2008-01-07  Allin Cottrell  <cottrell@wfu.edu>

	* term/pdf.trm (EMF_setfont):  Add support for encodings
	iso_8859_1 iso_8859_2 iso_8859_9 iso_8859_15 cp1250

2008-01-06  Allin Cottrell  <cottrell@wfu.edu>

	* term/emf.trm (EMF_setfont):  Add support for encodings
	iso_8859_2 iso_8859_9 cp1250 koi8r koi8u

2008-01-06  Ethan A Merritt  <merritt@u.washington.edu>

	* term/post.trm:  Default to abobeglyphnames TRUE.

2008-01-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (plotrequest):  Revert inadvertent change to handling of
	'set log cb' introduced 2007-08-31.

2008-01-04  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm: Missing semicolon in definition of gpPt4.

2007-12-31  Allin Cottrell  <cottrell@wfu.edu>

	* src/term_api.h src/term.c (change_term):  Add a field to TERM_TABLE.
	term->tscale is a scaling factor between internal terminal coordinates
	and the output pixel coordinates. Intended to support external mousing.

	* term/cairo.trm term/post.trm term/svg.trm: Initialize term->tscale.

	* src/eval.c (update_gpval_variables update_plot_bounds):
	Export pixel coordinates of plot boundary as seen in output image.
	TERM_XMIN TERM_XMAX TERM_YMIN TERM_YMAX

2007-12-31  Ethan A Merritt  <merritt@u.washington.edu>

	* src/show.c (show_variables) docs/gnuplot.doc:  Provide a mechanism
	for listed only select variables.  E.g. `show variables MOUSE` will